<resources>
    <string name="app_name">Vehicle</string>
    <string name="full_name_hint">Full Name</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="address_hint">Address</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="registration_failed">Registration failed: %1$s</string>
    <string name="registration_successful">Registration successful.</string>
</resources>

